Add trivial solution environment

--- a/berkovich.tex
+++ b/berkovich.tex
@@ -11,11 +11,12 @@
 \declaretheorem[sibling=equation]{lemma}
 \declaretheorem[sibling=equation]{definition}
 \declaretheorem[sibling=equation,style=remark]{remark}
-\declaretheorem[sibling=equation,style=remark]{exercise}
 \declaretheorem[sibling=equation,style=remark]{idea}
 \declaretheorem[sibling=equation]{conjecture}
 \declaretheorem[sibling=equation]{notation}
 \declaretheorem[sibling=equation]{example}
+\declaretheorem[sibling=equation,style=remark]{exercise}
+\newenvironment{solution}{}{}
 
 \usepackage{enumitem}
 
