Improve formatting of an equation

--- a/lecture02.tex
+++ b/lecture02.tex
@@ -80,7 +80,7 @@ It is natural to ask which graphs can occur as dual graphs. There is one
 immediate obstruction, which follows from the observation that for all $i \in
 I$:
 \begin{align*}
-	(\sum_{j \in I} N_{j}E_{j} \cdot E_{i}) &= 0 &&\text{by linear equivalence} \\
+	0 &= (\sum_{j \in I} N_{j}E_{j} \cdot E_{i}) &&\text{by linear equivalence} \\
 	&= \sum_{j \in I} N_{j} (E_{j} \cdot E_{i}) \\
 	&= \sum_{j \ne i} N_{j} \underbrace{(E_{j} \cdot E_{i})}_{\parbox{4.5em}{\tiny \centering number of edges between $v_{i}$ and $v_{j}$}} + N_{i}(E_{i} \cdot E_{i})
 \end{align*}
