Add lectures 4 and 5
Contributed by Valentijn Karemaker

--- a/berkovich.tex
+++ b/berkovich.tex
@@ -34,6 +34,15 @@
 
 \newcommand{\nr}{\mathrm{nr}}
 
+\usepackage[usenames,dvipsnames]{pstricks} 
+\usepackage{epsfig}
+\usepackage{graphicx,color}
+\usepackage[all]{xy}
+\xyoption{poly}
+%\usepackage{calrsfs}
+%\usepackage[T1]{fontenc}
+%\usepackage{textcomp}
+
 \title{Lecture notes on Berkovich skeleta}
 \author{Johannes Nicaissen \and Sam Payne}
 
@@ -44,8 +53,10 @@
 \input{lecture02.tex}
 
 \section{Lecture 3}
-\section{Lecture 4}
-\section{Lecture 5}
+
+\input{lecture04.tex}
+\input{lecture05.tex}
+
 \section{Lecture 6}
 \section{Lecture 7}
 \section{Lecture 8}
