Addenda to lectures 1 and 2
Thanks to Valentijn Karemaker, the text of lecture 1 and 2 is a bit more
complete!

--- a/lecture01.tex
+++ b/lecture01.tex
@@ -140,3 +140,11 @@ The intersection product has the following properties:
 		$D$ is a divisor on $\mathfrak{X}$, and $E$ a vertical divisor
 		on $\mathfrak{X}$.
 \end{itemize}
+
+If $D$ is a divisor on a regular model $\mathcal{X}$ of $X$, then 
+\[
+(D \cdot \mathcal{X}_{k}) = \mathrm{deg}(D|_{X}).
+\]
+\begin{exercise}
+	Prove this.
+\end{exercise}
