Corrects typo in name of one author

--- a/berkovich.tex
+++ b/berkovich.tex
@@ -44,7 +44,7 @@
 %\usepackage{textcomp}
 
 \title{Lecture notes on Berkovich skeleta}
-\author{Johannes Nicaissen \and Sam Payne}
+\author{Johannes Nicaise \and Sam Payne}
 
 \begin{document}
 \maketitle
