Adds lecture 9 and 14
Added my notes for lecture 9 and 14 and the commands I used to the main
berkovich file. Also corrected a small typo I noticed in lecture 4.

--- a/berkovich.tex
+++ b/berkovich.tex
@@ -26,10 +26,18 @@
 
 \newcommand{\ZZ}{\mathbb{Z}}
 \newcommand{\QQ}{\mathbb{Q}}
+\newcommand{\RR}{\mathbb{R}}
 \newcommand{\CC}{\mathbb{C}}
 \newcommand{\FF}{\mathbb{F}}
 \newcommand{\Aff}{\mathbb{A}}
 \newcommand{\Spec}{\mathrm{Spec}}
+\newcommand{\Jac}{\mathrm{Jac}}
+\newcommand{\Pic}{\mathrm{Pic}}
+\newcommand{\Hom}{\mathrm{Hom}}
+\newcommand{\Trop}{\mathrm{Trop}}
+\newcommand{\an}{\mathrm{an}}
+\newcommand{\val}{\mathrm{val}}
+\newcommand{\ord}{\mathrm{ord}}
 
 \newcommand{\chr}{\mathrm{char}}
 
@@ -81,14 +89,12 @@
 \section{Lecture 6}
 \section{Lecture 7}
 \section{Lecture 8}
-\section{Lecture 9}
-
+\input{lecture09.tex}
 \input{lecture10.tex}
-
 \section{Lecture 11}
 \section{Lecture 12}
 \section{Lecture 13}
-\section{Lecture 14}
+\input{lecture14.tex}
 \section{Lecture 15}
 
 \end{document}
