--- a/lecture04.tex
+++ b/lecture04.tex
@@ -31,7 +31,7 @@ A component $E$ of $\mathcal{X}_k$ is called \emph{principal} if $g(E) \geq 1$, 
 
 Let $$e = \mathrm{lcm}\{N_i \colon i \in I, E_i \textrm{  principal}\}$$ and write $$\mathcal{X}_k = \sum_{i \in I}N_iE_i.$$ Let $K'$ be the unique degree $e$ extension of $k$ in $K^{\mathrm{sep}}$, i.e., $K' = K(\sqrt[e]{t})$ where $t$ is a uniformiser in $R$. Let $R'$ again denote the integral closure of $R$ in $K'$.
 
-For the normalisation $\widetilde{\mathcal{X} \times_R R'}$, which has only $\ZZ/e\ZZ$-quotient singularities by assumption. Its minimal resolution $\mathcal{Y}$ is an snc-model of $X \times_K K'$ but need not be semistable. When we contract its exceptional curves, we \emph{do} obtain a relatively minimal scn-model, $\mathcal{Y}'$ say, which is semistable.
+For the normalisation $\widetilde{\mathcal{X} \times_R R'}$, which has only $\ZZ/e\ZZ$-quotient singularities by assumption. Its minimal resolution $\mathcal{Y}$ is an snc-model of $X \times_K K'$ but need not be semistable. When we contract its exceptional curves, we \emph{do} obtain a relatively minimal snc-model, $\mathcal{Y}'$ say, which is semistable.
 \[
 \xymatrix{
 \widetilde{\mathcal{X}\times_R R'} \ar[d]_{\mathrm{normalisation}} & \ar[l]^{\mathrm{min. res.}} \mathcal{Y} \ar[d]^{\textrm{contract exceptional curves}} \\
