Add some packages and theorem environments
Add packages 'mathrsfs' and 'MnSymbol'
Add theorem environments 'fact' and 'observation'

--- a/berkovich.tex
+++ b/berkovich.tex
@@ -1,18 +1,22 @@
 \documentclass[10pt,a4paper]{article}
-\usepackage[T1]{fontenc} 
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 
 \usepackage[english]{babel}
 
 \usepackage{amsmath,amssymb}
 \usepackage{amsthm,thmtools}
+\usepackage{mathrsfs}
+\usepackage{MnSymbol}
 \numberwithin{equation}{section}
 \declaretheorem[sibling=equation]{theorem}
 \declaretheorem[sibling=equation]{proposition}
 \declaretheorem[sibling=equation]{lemma}
 \declaretheorem[sibling=equation]{definition}
+\declaretheorem[sibling=equation]{fact}
 \declaretheorem[sibling=equation,style=remark]{remark}
 \declaretheorem[sibling=equation,style=remark]{idea}
+\declaretheorem[sibling=equation,style=remark]{observation}
 \declaretheorem[sibling=equation]{conjecture}
 \declaretheorem[sibling=equation]{notation}
 \declaretheorem[sibling=equation]{example}
@@ -43,7 +47,7 @@
 
 \newcommand{\nr}{\mathrm{nr}}
 
-\usepackage[usenames,dvipsnames]{pstricks} 
+\usepackage[usenames,dvipsnames]{pstricks}
 \usepackage{epsfig}
 \usepackage{graphicx,color}
 \usepackage[all]{xy}
@@ -84,8 +88,8 @@
 \input{lecture04.tex}
 \input{lecture05.tex}
 \section{Lecture 6}
-\section{Lecture 7}
-\section{Lecture 8}
+\input{lecture07.tex}
+\input{lecture08.tex}
 \input{lecture09.tex}
 \input{lecture10.tex}
 \section{Lecture 11}
