Add figures to lectures 1 and 2

--- a/berkovich.tex
+++ b/berkovich.tex
@@ -2,6 +2,8 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 
+\usepackage{etex}
+
 \usepackage[english]{babel}
 
 \usepackage{amsmath,amssymb}
@@ -76,11 +78,16 @@
 %END TEMP
 %End preamble by JK (lec10)
 
+\usepackage{hyperref}
+\usepackage{cleveref}
+
 \title{Lecture notes on Berkovich skeleta}
 \author{Johannes Nicaise \and Sam Payne}
 
 \begin{document}
 \maketitle
+
+\tableofcontents
 
 \input{lecture01.tex}
 \input{lecture02.tex}
