--- a/lecture01.tex
+++ b/lecture01.tex
@@ -14,9 +14,18 @@ $\mathfrak{X}$ regular, $f$ proper and flat, and such that all singular fibres
 of $f$ are strict normal crossings divisors.
 (Strict normal crossings divisors means that locally they look like unions of
 coordinate hyperplanes.)
-%\begin{tikzpicture}
-%	(0,0) -- (1,2);
-%\end{tikzpicture}
+\begin{center}
+	\begin{tikzpicture}[every node/.style={font=\small}]
+		\draw (-2,2) node[left] {$\mathfrak{X}$} -- (-2,0) -- (2,0);
+		\draw (-2,-.7) node[left] {$\Aff^{1}_{\CC}$} -- (2,-.7);
+		\draw[->] (-2.25,1.6) -- node[left] {$f$} (-2.25,-.2);
+		\draw (-.5,2) node[above] {$X = \mathfrak{X}_{a}$} -- (-.5,.1);
+		\draw (1.5,2) node[above] {$\mathfrak{X}_{0}$} -- (1.5,.1);
+		\draw (1.3,1.6) to [controls=+(0:.8) and +(0:.8)] (1.3,0.9);
+		\draw[fill] (-.5,-.7) circle (.01) node[below] {$\tau = a\vphantom{0}$};
+		\draw[fill] (1.5,-.7) circle (.01) node[below] {$\tau = 0$};
+	\end{tikzpicture}
+\end{center}
 \begin{idea}
 	The geometric complexity of $X$ is reflected in the geometric
 	complexity of $\mathfrak{X}_{0}$.
@@ -78,9 +87,19 @@ Z_{d}^{N_{d}}$ for some $N_{i} \ge 0$. We say that $\mathfrak{X}$ is an
 \emph{nc-model} if $\mathfrak{X}$ is regular and $\mathfrak{X}_{k}$ is a normal
 crossings divisor, i.e., an snc-divisor for the étale topology. This ``allows
 for self-intersections''.
-\begin{tikzpicture}
-	%nodal curve: nc but not snc
-\end{tikzpicture}
+\begin{center}
+	\begin{tikzpicture}[every node/.style={font=\small}]
+		\draw (0,0) to [controls=+(110:3) and +(250:3)] (0,1);
+		\path (0,.5) node[right] {nc, but not snc};
+
+		\draw[->] (-.5,-1.2) -- node[right] {étale} (-.5,-.4);
+
+		\begin{scope}[yshift=-2.5cm]
+			\draw (0,0) to [controls=+(180:1) and +(180:1)] (0,1);
+			\draw (0,.1) to [controls=+(200:2) and +(160:2)] (0,.9);
+		\end{scope}
+	\end{tikzpicture}
+\end{center}
 
 The variety $X$ always has an $R$-model, by Nagata's embedding theorem.
 \[
@@ -107,7 +126,20 @@ Let $X$ be a curve, $\mathfrak{X}$ a regular model of $X$. A divisor $E =
 \sum_{i=1}^{n} a_{i}E_{i}$ is \emph{vertical} if it is supported on
 $\mathfrak{X}_{k}$. (In particular, then $E$ is proper over $k$.)
 
-TODO: Picture of vertical divisor.
+\begin{figure}
+	\caption{The distinction between horizontal and vertical divisors}
+	\label{horvertdivs}
+	\begin{center}
+		\begin{tikzpicture}[every node/.style={font=\small}]
+			\draw (0,2) node[left] {$\mathfrak{X}$} -- (0,0) -- (2,0);
+			\draw (1.5,2) node[above] {vert.} to[controls=+(260:1) and +(100:1)] (1.5,.1);
+			\draw (1.2,1.5) -- (1.7,1.8) node[right] {vert.};
+			\draw (1.7,1.3) to [controls=+(180:.8) and +(180:.8)] (1.7,0.9) node[right] {vert.};
+			\draw (.3,1) to[controls=+(290:.7) and +(180:1)] (1.8,.3) node[right] {hor.};
+			\path (1.5,0) node[below] {$\mathfrak{X}_{\kappa}$};
+		\end{tikzpicture}
+	\end{center}
+\end{figure}
 
 Let $E = \sum_{i=1}^{n} a_{i}E_{i}$ be a vertical divisor, and $D$ any divisor.
 The intersection product is defined as:
@@ -125,7 +157,7 @@ The intersection product has the following properties:
 	\item It is \emph{not(!)} invariant under linear equivalence on $E$.
 		For example $\mathfrak{X}_{k} \sim 0$, but $(D \cdot
 		\mathfrak{X}_{k}) \ne 0$ if $D$ consists of one horizontal
-		component. TODO: add picture.
+		component. See for example \cref{horvertdivs}.
 	\item Behaviour under morphisms: If $h \colon \mathfrak{Y} \to
 		\mathfrak{X}$ is a morphism of models, then
 		\begin{center}
