--- a/lecture14.tex
+++ b/lecture14.tex
@@ -47,7 +47,7 @@ $T_0(L) = T(R_L)$
 
 \noindent We can now see that we more or less have that $N_{\RR} = T^{\an}/T_0$. This statement has been made more precise by the following theorem
 
-\begin{theorem} $N_{\RR} = (T^{\an}/T_0)^{\an}$ (Abramovich-Chen-Markus- Wise)/Mulisch ?
+\begin{theorem} $N_{\RR} = (T^{\an}/T_0)^{\an}$ (Abramovich--Chen--Markus--Wise)/Mulisch?
 
 \noindent Rough picture. Good analogue of skeleton of a Jacobian.
 
