--- a/berkovich.tex
+++ b/berkovich.tex
@@ -14,6 +14,7 @@
 \declaretheorem[sibling=equation]{theorem}
 \declaretheorem[sibling=equation]{proposition}
 \declaretheorem[sibling=equation]{lemma}
+\declaretheorem[sibling=equation]{corollary}
 \declaretheorem[sibling=equation]{definition}
 \declaretheorem[sibling=equation]{fact}
 \declaretheorem[sibling=equation,style=remark]{remark}
@@ -23,6 +24,7 @@
 \declaretheorem[sibling=equation]{notation}
 \declaretheorem[sibling=equation]{example}
 \declaretheorem[sibling=equation,style=remark]{exercise}
+\declaretheorem[sibling=equation,style=remark]{algorithm}
 
 \usepackage{answers}
 \usepackage{nextpage}
@@ -92,7 +94,7 @@
 
 \input{lecture01.tex}
 \input{lecture02.tex}
-\section{Lecture 3}
+\input{lecture03.tex}
 \input{lecture04.tex}
 \input{lecture05.tex}
 \section{Lecture 6}
@@ -104,7 +106,7 @@
 \section{Lecture 12}
 \section{Lecture 13}
 \input{lecture14.tex}
-\section{Lecture 15}
+\input{lecture15.tex}
 
 \Closesolutionfile{solutionfile}
 \Closesolutionfile{hintsfile}
