--- a/berkovich.tex
+++ b/berkovich.tex
@@ -102,7 +102,7 @@
 \input{lecture08.tex}
 \input{lecture09.tex}
 \input{lecture10.tex}
-\section{Lecture 11}
+\input{lecture11.tex}
 \section{Lecture 12}
 \section{Lecture 13}
 \input{lecture14.tex}
