--- a/berkovich.tex
+++ b/berkovich.tex
@@ -104,7 +104,7 @@
 \input{lecture10.tex}
 \input{lecture11.tex}
 \section{Lecture 12}
-\section{Lecture 13}
+\input{lecture13.tex}
 \input{lecture14.tex}
 \input{lecture15.tex}
 
